--- a/index.html
+++ b/index.html
@@ -381,37 +381,6 @@
     </div>
   </div>
 
-  <script>
-    // Sidebar toggle (keeps app.js/ui.js untouched)
-    (function () {
-      const body = document.body;
-      const btn = document.getElementById("sidebarToggle");
-      const backdrop = document.getElementById("sidebarBackdrop");
-
-      function setExpanded(expanded) {
-        btn.setAttribute("aria-expanded", expanded ? "true" : "false");
-        btn.setAttribute("aria-label", expanded ? "Close sidebar" : "Open sidebar");
-      }
-
-      function closeSidebar() {
-        body.classList.remove("sidebar-open");
-        setExpanded(false);
-      }
-
-      btn.addEventListener("click", () => {
-        body.classList.toggle("sidebar-open");
-        setExpanded(body.classList.contains("sidebar-open"));
-      });
-
-      backdrop.addEventListener("click", closeSidebar);
-
-      window.addEventListener("keydown", (e) => {
-        if (e.key === "Escape") closeSidebar();
-      });
-
-      // default: closed everywhere
-      setExpanded(false);
-    })();
-  </script>
+  <script type="module" src="./js/dashboard-shell.js"></script>
 </body>
 </html>
