--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@400;500;600;700&display=swap"
     rel="stylesheet"
   />
+  <link rel="stylesheet" href="./css/marketing-base.css" />
   <link rel="stylesheet" href="./login.css" />
 </head>
 <body class="mode-login">
