--- a/login.html
+++ b/login.html
@@ -133,6 +133,7 @@
           <button class="primary-btn" id="passwordSubmitBtn" type="submit" data-method="password">
             Sign in
           </button>
+          <div class="inline-message" id="passwordInlineMessage" role="status" aria-live="polite"></div>
         </div>
 
         <div class="section-divider"><span>or</span></div>
@@ -162,6 +163,7 @@
           <button class="secondary-btn" id="magicSubmitBtn" type="submit" data-method="magic">
             Send magic link
           </button>
+          <div class="inline-message" id="magicInlineMessage" role="status" aria-live="polite"></div>
         </div>
 
         <div class="panel-note" id="panelNote">
