--- a/home.html
+++ b/home.html
@@ -16,7 +16,9 @@
 <body>
   <header class="site-header">
     <div class="brand">
-      <div class="brand-mark" aria-hidden="true"></div>
+      <div class="brand-mark" aria-hidden="true">
+        <img src="./assets/Logo.png" alt="Chatbot Dashboard logo" />
+      </div>
       <div class="brand-copy">
         <div class="brand-title">Performance Dashboard</div>
         <div class="brand-sub">Powered by AI</div>
