--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <body>
   <header class="topbar">
     <div class="brand">
-      <div class="logo">🤖</div>
+      <div class="logo">
+        <img src="./assets/Logo.png" alt="Chatbot Dashboard logo" />
+      </div>
       <div>
-        <div class="brand-title">Chatbot Performance</div>
+        <div class="brand-title">Performance Dashboard</div>
         <div class="brand-subtitle" id="envLabel">VBJ Services</div>
       </div>
     </div>
