--- a/login.html
+++ b/login.html
@@ -22,7 +22,9 @@
   <main class="auth-page">
     <section class="auth-panel" aria-live="polite">
       <div class="panel-brand">
-        <div class="brand-mark" aria-hidden="true"></div>
+        <div class="brand-mark" aria-hidden="true">
+          <img src="./assets/Logo.png" alt="Chatbot Dashboard logo" />
+        </div>
         <div>
           <div class="brand-title">Chatbot Dashboard</div>
           <div class="brand-sub">Secure workspace access</div>
