--- a/home.html
+++ b/home.html
@@ -143,9 +143,8 @@
           <circle class="wheel-seg failed" cx="100" cy="100" r="72" stroke="url(#grad-failed)"></circle>
         </svg>
         <div class="wheel-center">
-          <div class="wheel-kicker">Assistant outcomes</div>
-          <div class="wheel-main">Success wheel</div>
-          <div class="wheel-sub">Live conversation split</div>
+          <div class="wheel-kicker">Analyze outcomes</div>
+          <div class="wheel-main">Success Rate</div>
         </div>
         <div class="wheel-legend">
           <div class="legend-item success">
