- Added different outcomes to pie chart - Re-arranged the lagenda

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <!-- Charts -->
         <section class="grid charts-grid">
           <div class="card">
-            <div class="card-title">Today: Success rate</div>
+          <div class="card-title">Today: Overview</div>
             <div class="donut-wrap">
               <canvas id="chartTodaySuccess"></canvas>
             </div>
