- 3 bars instead of 6 in home page

--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
               </div>
             </div>
             <div class="gif-bars">
-              <span></span><span></span><span></span><span></span><span></span><span></span>
+              <span></span><span></span><span></span>
             </div>
           </div>
           <div class="gif-scan"></div>
