- Admin pill on admin accounts in sidebar

--- a/index.html
+++ b/index.html
@@ -221,7 +221,10 @@
       <aside class="sidebar" id="sidebar" aria-label="Dashboard sidebar">
         <div class="sidebar-inner">
           <div class="sidebar-user">
-            <div class="sidebar-user-label">Signed in as</div>
+            <div class="sidebar-user-label">
+              Signed in as
+              <span class="admin-pill">Admin</span>
+            </div>
             <div class="sidebar-user-name" id="sidebarUserName">-</div>
             <div class="sidebar-user-email" id="sidebarUserEmail"></div>
             <div class="sidebar-user-actions">
