--- a/login.html
+++ b/login.html
@@ -135,6 +135,7 @@
           <button class="primary-btn" id="passwordSubmitBtn" type="submit" data-method="password">
             Sign in
           </button>
+          <div class="form-message" id="passwordMessage" role="status" aria-live="polite"></div>
         </div>
 
         <div class="section-divider"><span>or</span></div>
@@ -164,6 +165,7 @@
           <button class="secondary-btn" id="magicSubmitBtn" type="submit" data-method="magic">
             Send magic link
           </button>
+          <div class="form-message" id="magicMessage" role="status" aria-live="polite"></div>
         </div>
 
         <div class="panel-note" id="panelNote">
@@ -171,7 +173,6 @@
         </div>
       </form>
 
-      <div class="form-message" id="formMessage" role="status" aria-live="polite"></div>
     </section>
   </main>
 
